[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.14.0", features = ["exts"] }
uefi-services = "0.11.0"

log = { version = "0.4.11", default-features = false }

qemu-exit = "3.0.0"

[features]
# This feature should only be enabled in our CI, it disables some tests
# which currently fail in that environment (see #103 for discussion).
ci = []
qemu = ["uefi-services/qemu"]
